TPLTECHIE-13 #comment fixing alignement errors on the arrows from the slideshow.

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1088,7 +1088,7 @@ dl.tabs.nav h3 , dl.tabs.nav p {
 	width: 63px;
 	height: 168px;
 	top: 180px;
-	right: -3px;
+	right: 0px;
 	cursor: pointer;
 }
 
@@ -1099,7 +1099,7 @@ dl.tabs.nav h3 , dl.tabs.nav p {
 	width: 63px;
 	height: 168px;
 	top: 180px;
-	left: -3px;
+	left: 0px;
 	cursor: pointer;
 }
 
